[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "wifi-app"
version = "0.1.0"

[dependencies]
drogue-device = { path = "../../device", default-features = false }
defmt = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
heapless = "0.7"

[features]

defmt-default = [ ]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]