[package]
name = "disco-iot01a"
version = "0.1.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for the STM32 B-L475E-IOT01A and B-L45SI discovery boards"

[workspace]

[dependencies]
embassy-stm32 = { version = "0.1.0", default-features = false, features = ["exti", "unstable-traits", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false }
es-wifi-driver = { version = "0.3", default-features = false }
cortex-m = "0.7"

[features]
l475e = ["embassy-stm32/stm32l475vg"]
l4s5i = ["embassy-stm32/stm32l4s5vi"]
defmt = ["es-wifi-driver/defmt"]
default = ["l475e"]

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
