[package]
name = "nucleo-wl55jc"
version = "0.1.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for the STM32 Nucleo WL55JC board"

[workspace]

[dependencies]
embassy-stm32 = { version = "0.1.0", default-features = false, features = ["exti", "unstable-traits", "nightly", "stm32wl55jc-cm4", "memory-x", "time-driver-any", "unstable-pac"] }
embassy-time = { version = "0.1.0", default-features = false }
embassy-lora = { version = "0.1.0", default-features = false, features = ["stm32wl", "time"] }
static_cell = "1"
cortex-m = "0.7"
lorawan-device = { version = "0.8", default-features = false, features = ["async"] }
lorawan = { version = "0.7.1", default-features = false, features = ["default-crypto"] }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426" }
