[package]
name = "cloud-http"
version = "0.1.0"
edition = "2021"
description = "Example sending telemetry data to and receiving commands from Drogue Cloud"
keywords = ["std", "networking", "cloud"]

[dependencies]
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

drogue-device = { path = "../../device", default-features = false }
embedded-tls = { version = "0.8.0", default-features = false, features = ["async"] }

[features]
log = ["dep:log"]
defmt = ["dep:defmt"]
static_cell = "1"
