[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-platform-std"
version = "0.1.0"

[lib]

[dependencies.embassy]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-std]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.drogue-device-kernel]
path = "../../kernel"
features = ["log"]

[dependencies.drogue-device-macros]
path = "../../macros"

[features]
log = ["drogue-device-kernel/log", "embassy/log"]
