[workspace]
members = [
    "display",
    "ble",
]

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
