[workspace]
members = [
    "display",
    "ble",
]

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "3b08bda268d343e100932cbf0df7e007826fa3be" }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "3b08bda268d343e100932cbf0df7e007826fa3be" }
